
Tue Mar 16 13:51:18 2004  Amogh Kavimandan  <amoghk@dre.vanderbilt.edu>

  * examples/Advanced/ch_12/client.cpp
  * examples/Advanced/ch_12/server.cpp
  * examples/Advanced/ch_12/server.h
  * examples/Advanced/ch_12/icp.cpp
  * examples/Advanced/ch_12/icp.h

    Added min() function for vc6.0 so that this example compiles.

Tue Mar 16 11:43:28 2004  Amogh Kavimandan  <amoghk@dre.vanderbilt.edu>

  * examples/Advanced/ch_8_and_10/client.cpp
  * examples/Advanced/ch_8_and_10/server.cpp
  * examples/Advanced/ch_8_and_10/server.h
  * examples/Advanced/ch_8_and_10/icp.cpp
  * examples/Advanced/ch_8_and_10/icp.h

    Added min() function for vc6.0 so that this example compiles.

Tue Mar 16 09:36:42 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Any_Unknown_IDL_Type.cpp (_tao_decode):

	  Update the byte order from the incoming CDR stream.

	* tao/CORBA_String.cpp:

	  Applied patches from Oliver Kellog and Paolo Carlini
	  <pcarlini@suse.de> which helps TAO to get compiling with
	  g++ 3.4 (prerelease). Paolo mentions that this should make things
	  more portable. It compiles fine with g++ atleast. We need to see how
	  things go on other platforms.

Tue Mar 16 09:40:54 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_decl.cpp:
        * TAO_IDL be/be_interface.cpp:
        * TAO_IDL be/be_visitor_interface/amh_rh_sh.cpp:
        * TAO_IDL be/be_visitor_interface/amh_rh_ss.cpp:
        * TAO_IDL be/be_visitor_interface/direct_proxy_impl_sh.cpp:
        * TAO_IDL be/be_visitor_interface/interface_ch.cpp:
        * TAO_IDL be/be_visitor_interface/thru_poa_proxy_impl_sh.cpp:
        * TAO_IDL be/be_visitor_valuetype/valuetype_cs.cpp:
        * TAO_IDL be/be_visitor_valuetype/valuetype_init_cs.cpp:
        * TAO_IDL be_include/be_decl.h:
        * TAO_IDL be_include/be_interface.h:

          - Added code generation that redeclares operations that a local
            interface has inherited from a non-local one as pure virtual.